--- a/module/Page/view/page/page/fast-sales.phtml
+++ b/module/Page/view/page/page/fast-sales.phtml
@@ -1,6 +1,8 @@
-<div class="title-line"></div>
 <div class="title-contacts"><h1>Старт быстрых продаж</h1></div>
-<div class="title-line"></div>
+
+<div class="separator-line">
+    <div class="separator"></div>
+</div>
 
 <div class="body-block_6 magrin_top_10">
     <span class="body-color"><b>Хороший старт продаж</b></span> – естественное желание каждого бизнесмена. 
