--- a/module/Page/view/page/page/m-research.phtml
+++ b/module/Page/view/page/page/m-research.phtml
@@ -1,6 +1,8 @@
-<div class="title-line"></div>
 <div class="title-contacts"><h1>Маркетинговые исследования</h1></div>
-<div class="title-line"></div>
+
+<div class="separator-line">
+    <div class="separator"></div>
+</div>
 
 <div class="body-block_1 magrin_top_10">
     Дайте потенциальным покупателям то, чего они желают, и они станут
