--- a/module/Page/view/page/page/portfolio.phtml
+++ b/module/Page/view/page/page/portfolio.phtml
@@ -1,7 +1,8 @@
-<div class="title-line"></div>
 <div class="title-contacts"><h1>Портфолио</h1></div>
-<div class="title-line"></div>
 
+<div class="separator-line">
+    <div class="separator"></div>
+</div>
 
 <div class="portfolio-body-slider">
     <?php echo $this->Portfolio(); ?>
