--- a/module/Page/view/page/page/sell-pages.phtml
+++ b/module/Page/view/page/page/sell-pages.phtml
@@ -1,11 +1,13 @@
-<div class="title-line"></div>
 <div class="title-contacts"><h1>Продающие страницы</h1></div>
-<div class="title-line"></div>
+
+<div class="separator-line">
+    <div class="separator"></div>
+</div>
 
 <div class="body-block_6 magrin_top_10">
     <span class="body-color"><b>Страница товара</b></span>
     <i>(landingpage, целевая страница)</i> 
-     - это страница, главная цель которой – побуждение пользователя к активным 
+    - это страница, главная цель которой – побуждение пользователя к активным 
     действиям, то есть к покупке Вашего товара или услуги. Пользователи 
     оказываются на этой странице, перейдя по ссылке из контекстной рекламы, 
     почтовой рассылки, баннера и т.д.: это люди, уже заинтересованные в 
