--- a/module/Page/view/page/page/services.phtml
+++ b/module/Page/view/page/page/services.phtml
@@ -1,6 +1,8 @@
-<div class="title-line"></div>
-<div class="title-contacts"><h1>Услуги</h1></div>
-<div class="title-line"></div>
+<div class="title-contacts"><h1>Пакетные решения</h1></div>
+
+<div class="separator-line">
+    <div class="separator"></div>
+</div>
 
 <div class="body-block_6 magrin_top_10">
     Мы заботимся о том, чтобы созданные сайты легко находились целевыми
