--- a/module/Page/view/page/page/support.phtml
+++ b/module/Page/view/page/page/support.phtml
@@ -1,6 +1,8 @@
-<div class="title-line"></div>
 <div class="title-contacts"><h1>Сопровождение сайта</h1></div>
-<div class="title-line"></div>
+
+<div class="separator-line">
+    <div class="separator"></div>
+</div>
 
 <div class="promotion-body-block_1">
     Мы заботимся о том, чтобы созданные нами сайты легко находились целевыми
@@ -18,7 +20,7 @@
     body.support .title-line {
         width: 175px;
     }
-    
+
     body.support .title-contacts {
         width: 440px;
     }
