--- a/module/Page/view/page/page/contacts.phtml
+++ b/module/Page/view/page/page/contacts.phtml
@@ -1,6 +1,8 @@
-<div class="title-line"></div>
 <div class="title-contacts"><h1>Контакты</h1></div>
-<div class="title-line"></div>
+
+<div class="separator-line">
+    <div class="separator"></div>
+</div>
 
 <iframe class="google-map" style="float: left; "width="400" height="615" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=1%D0%B0+%D1%83%D0%BB%D0%B8%D1%86%D0%B0+%D0%A9%D0%BE%D1%80%D1%81%D0%B0,+%D0%9C%D0%B8%D0%BD%D1%81%D0%BA,+%D0%9C%D0%B8%D0%BD%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+%D0%91%D0%B5%D0%BB%D0%B0%D1%80%D1%83%D1%81%D1%8C&amp;aq=0&amp;oq=%D1%89%D0%BE%D1%80%D1%81%D0%B0+1%D0%B0&amp;sll=37.0625,-95.677068&amp;sspn=58.555544,135.263672&amp;ie=UTF8&amp;hq=&amp;hnear=%D0%90%D0%BF%D0%B0%D1%80%D1%82%D0%9E%D1%82%D0%B5%D0%BB%D1%8C+%D0%A9%D0%BE%D1%80%D1%81%D0%B0+1,+Shchors+St+1,+Moskovskiy+Rayon,+Minsk,+Minsk+Region,+Minsk+Province,+Belarus&amp;ll=53.880884,27.518586&amp;spn=0.043208,0.132093&amp;t=m&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe>
 
@@ -33,13 +35,13 @@ echo $this->form()->openTag($form);
 
     <div class="form-input user-data"><?= $this->formElement($form->get('phone')); ?></div>
     <div class="form-error"><?= $this->formElementErrors($form->get('phone')); ?></div>
-    
+
     <div class="form-input user-data"><?= $this->formElement($form->get('email')); ?></div>
     <div class="form-error"><?= $this->formElementErrors($form->get('email')); ?></div>
-    
+
     <div class="form-input"><?= $this->formElement($form->get('text')); ?></div>
     <div class="form-error"><?= $this->formElementErrors($form->get('text')); ?></div>
-   
+
     <?= $this->formCaptcha($form->get('captcha')); ?>
     <div class="form-error"><?= $this->formElementErrors($form->get('captcha')); ?></div>
 
