little code fixes, landings for sell-pages

--- a/module/Page/view/page/page/design.phtml
+++ b/module/Page/view/page/page/design.phtml
@@ -1,4 +1,4 @@
-<div class="design-content">
+<div class="content-wrap">
     <div class="title">
         <div class="title-icon_main page_design"></div>
         <h1 class="title_text">WEB Design</h1>
@@ -123,8 +123,8 @@
             delay(function () {
                 bannerSlider.destroySlider();
                 bannerSlider.reloadSlider({
-                    slideWidth: $('.design-body-slider_item').width(),
-                    minSlides: 1,
+                    slideWidth: $('.design-body-slider_link').width(),
+                    minSlides: 2,
                     moveSlides: 1,
                     controls: true,
                     pager: true
