--- a/module/Page/view/page/page/sell-pages.phtml
+++ b/module/Page/view/page/page/sell-pages.phtml
@@ -1,82 +1,129 @@
-<div class="title-contacts"><h1>Продающие страницы</h1></div>
+<div class="content-wrap">
+    <div class="title-contacts"><h1>Продающие страницы</h1></div>
 
-<div class="separator-line">
-    <div class="separator"></div>
+    <div class="separator-line">
+        <div class="separator"></div>
+    </div>
+
+    <div class="body-block_6 magrin_top_10">
+        <span class="body-color"><b>Страница товара</b></span>
+        <i>(landingpage, целевая страница)</i> 
+        - это страница, главная цель которой – побуждение пользователя к активным 
+        действиям, то есть к покупке Вашего товара или услуги. Пользователи 
+        оказываются на этой странице, перейдя по ссылке из контекстной рекламы, 
+        почтовой рассылки, баннера и т.д.: это люди, уже заинтересованные в 
+        приобретении Ваших товаров и услуг, и остается только подтолкнуть их к 
+        фактической покупке.
+    </div>
+
+    <div class="body-block_3 magrin_top_20">
+        Что представляет собой хорошая продающая страница?
+    </div>
+
+    <div class="body-block_6 magrin_top_20 body-background2 body-color2">
+        Продающая страница полностью состоит из интересной и важной для покупателя
+        информации в концентрированном виде, оформленной в яркий дизайн. На
+        landingpage есть все, чтобы покупатель смог заказать товар или услугу,
+        и нет ничего лишнего, что могло бы отвлечь его от покупки. По сути, это
+        одностраничный сайт быстрых продаж, оказавшись на котором, пользователь
+        понимает, что ему абсолютно точно нужен данный товар и,по возможности,
+        прямо сейчас.
+    </div>
 </div>
 
-<div class="body-block_6 magrin_top_10">
-    <span class="body-color"><b>Страница товара</b></span>
-    <i>(landingpage, целевая страница)</i> 
-    - это страница, главная цель которой – побуждение пользователя к активным 
-    действиям, то есть к покупке Вашего товара или услуги. Пользователи 
-    оказываются на этой странице, перейдя по ссылке из контекстной рекламы, 
-    почтовой рассылки, баннера и т.д.: это люди, уже заинтересованные в 
-    приобретении Ваших товаров и услуг, и остается только подтолкнуть их к 
-    фактической покупке.
+<div class="landing-section_2-image_table" data-uk-modal="{target:'#myModal'}">
+    <div class="landing-section_2-image_table-row-cell">
+        <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_2.jpg" data-id="5_port">
+    </div>
+    <div class="landing-section_2-image_table-row-cell">
+        <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_3.jpg" data-id="1_port">
+    </div>
+    <div class="landing-section_2-image_table-row-cell">
+        <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_5.jpg" data-id="6_port">
+    </div>
+    <div class="landing-section_2-image_table-row-cell">
+        <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_7.jpg" data-id="3_port">
+    </div>
+    <div class="landing-section_2-image_table-row-cell">
+        <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_1.jpg" data-id="7_port">
+    </div>
+    <div class="landing-section_2-image_table-row-cell">
+        <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_4.jpg" data-id="4_port">
+    </div>
+    <div class="landing-section_2-image_table-row-cell">
+        <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_6.jpg" data-id="2_port">
+    </div>
+    <div class="landing-section_2-image_table-row-cell">
+        <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_8.jpg" data-id="8_port">
+    </div>
 </div>
 
-<div class="body-block_3 magrin_top_20">
-    Что представляет собой хорошая продающая страница?
+<div class="content-wrap">
+    <div class="body-block_4 magrin_top_20">
+        Наиболее эффективные области применения landingpage:
+    </div>
+
+    <ul class="body-ul_1 body-background2 body-color2 magrin_top_10">
+        <li>сайты промо-акций, скидок и распродаж</li>
+        <li>веб-ресурсы для продвижения новых товаров и брендов</li>
+        <li>в качестве элемента рекламной кампании</li>
+        <li>для лидогенерации (так называется процесс получения контактных данных
+            пользователя для предложения ему товаров и услуг в дальнейшем)</li>
+    </ul>
+
+    <div class="body-block_6 magrin_top_20 ">
+        Целевая страница становится той виртуальной площадкой, где покупатель
+        принимает решение приобрести Ваш товар или услугу либо выполнить другие
+        необходимые Вам действия (подписаться на рассылку, оставить контактные
+        данные, отправить письмо-заявку менеджерам и т.д.). 
+    </div>
+
+    <div class="body-block_3 magrin_top_20">
+        Что предлагаем мы:
+    </div>
+
+    <ul class="body-ul_1 body-background2 body-color2 magrin_top_10">
+        <li>изучение потребностей целевой аудитории</li>
+        <li>разработка и создание продающих страниц</li>
+        <li>анализ эффективности страницы товара</li>
+        <li>и <span class="body-underline">наше уникальное предложение: создание продающей страницы бесплатно</span> – 
+            при заказе контекстной рекламы с бюджетом не менее 5500 000 бел руб в 
+            месяц и заключении договора на год</li>
+    </ul>
+
+    <div class="body-block_3 magrin_top_20">
+        Нужен быстрый старт продаж в Минске? Контекстная реклама от 
+        «Азбука Mediagroup» – Ваш выбор!<br/>
+    </div>
+
+    <div class="separator-line">
+        <div class="separator"></div>
+    </div>
+
+    <div class="body-block_7 magrin_top_20">
+        <a href="<?= $this->url('page', array('action' => 'checkout')) ?>">
+            <div class="body-button">Оформить заказ</div>
+        </a>
+    </div>
 </div>
 
-<div class="body-block_6 magrin_top_20 body-background2 body-color2">
-    Продающая страница полностью состоит из интересной и важной для покупателя
-    информации в концентрированном виде, оформленной в яркий дизайн. На
-    landingpage есть все, чтобы покупатель смог заказать товар или услугу,
-    и нет ничего лишнего, что могло бы отвлечь его от покупки. По сути, это
-    одностраничный сайт быстрых продаж, оказавшись на котором, пользователь
-    понимает, что ему абсолютно точно нужен данный товар и,по возможности,
-    прямо сейчас.
+<div class="uk-modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="uk-modal-dialog">
+        <div class="modal-content">
+            <a href class="uk-modal-close close">×</a>
+            <div class="modal-content-image-wrap">
+                <img class="modal-content-image">
+            </div>
+        </div>
+    </div>
 </div>
 
-<div class="sell-pages-body-image"></div>
-
-<div class="body-block_4 magrin_top_20">
-    Наиболее эффективные области применения landingpage:
-</div>
-
-<ul class="body-ul_1 body-background2 body-color2 magrin_top_10">
-    <li>сайты промо-акций, скидок и распродаж</li>
-    <li>веб-ресурсы для продвижения новых товаров и брендов</li>
-    <li>в качестве элемента рекламной кампании</li>
-    <li>для лидогенерации (так называется процесс получения контактных данных
-        пользователя для предложения ему товаров и услуг в дальнейшем)</li>
-</ul>
-
-<div class="body-block_6 magrin_top_20 ">
-    Целевая страница становится той виртуальной площадкой, где покупатель
-    принимает решение приобрести Ваш товар или услугу либо выполнить другие
-    необходимые Вам действия (подписаться на рассылку, оставить контактные
-    данные, отправить письмо-заявку менеджерам и т.д.). 
-</div>
-
-<div class="body-block_3 magrin_top_20">
-    Что предлагаем мы:
-</div>
-
-<ul class="body-ul_1 body-background2 body-color2 magrin_top_10">
-    <li>изучение потребностей целевой аудитории</li>
-    <li>разработка и создание продающих страниц</li>
-    <li>анализ эффективности страницы товара</li>
-    <li>и <span class="body-underline">наше уникальное предложение: создание продающей страницы бесплатно</span> – 
-        при заказе контекстной рекламы с бюджетом не менее 5500 000 бел руб в 
-        месяц и заключении договора на год</li>
-</ul>
-
-<div class="body-block_3 magrin_top_20">
-    Нужен быстрый старт продаж в Минске? Контекстная реклама от 
-    «Азбука Mediagroup» – Ваш выбор!<br/>
-</div>
-
-<div class="body-line magrin_top_10"></div>
-
-<div class="body-block_3 magrin_top_10">
-    Звоните нам!<br/>
-    Пишите нам!
-</div>
-
-<div class="body-block_7 magrin_top_20">
-    <a href="<?= $this->url('page', array('action' => 'checkout')) ?>">
-        <div class="body-button">Оформить заказ</div>
-    </a>
-</div>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('body').css('height', 'auto');
+        
+        $('.landing-section_2-image_table-row-cell-image').on('click', function () {
+            $('.modal-content-image').attr('src', '/img/landing/' + $(this).data('id') + '.jpg');
+        });
+    });
+</script>
