--- a/module/Page/view/page/page/landing.phtml
+++ b/module/Page/view/page/page/landing.phtml
@@ -167,14 +167,30 @@
         </div>
     </div>
     <div class="landing-section_2-image_table" data-uk-modal="{target:'#myModal'}">
-        <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_2.jpg" data-id="5_port">
-        <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_3.jpg" data-id="1_port">
-        <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_5.jpg" data-id="6_port">
-        <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_7.jpg" data-id="3_port">
-        <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_1.jpg" data-id="7_port">
-        <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_4.jpg" data-id="4_port">
-        <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_6.jpg" data-id="2_port">
-        <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_8.jpg" data-id="8_port">
+        <div class="landing-section_2-image_table-row-cell">
+            <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_2.jpg" data-id="5_port">
+        </div>
+        <div class="landing-section_2-image_table-row-cell">
+            <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_3.jpg" data-id="1_port">
+        </div>
+        <div class="landing-section_2-image_table-row-cell">
+            <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_5.jpg" data-id="6_port">
+        </div>
+        <div class="landing-section_2-image_table-row-cell">
+            <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_7.jpg" data-id="3_port">
+        </div>
+        <div class="landing-section_2-image_table-row-cell">
+            <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_1.jpg" data-id="7_port">
+        </div>
+        <div class="landing-section_2-image_table-row-cell">
+            <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_4.jpg" data-id="4_port">
+        </div>
+        <div class="landing-section_2-image_table-row-cell">
+            <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_6.jpg" data-id="2_port">
+        </div>
+        <div class="landing-section_2-image_table-row-cell">
+            <img class="landing-section_2-image_table-row-cell-image" src="/img/landing/image_8.jpg" data-id="8_port">
+        </div>
     </div>
 </section>
 
@@ -978,81 +994,7 @@
 
 <style>
 
-    .close {
-        font: 400 14px / 20px "Helvetica Neue",Helvetica,Arial,sans-serif;
-        padding: 10px;
-        cursor: pointer;
-        background: 0 0;
-        border: 0;
-        -webkit-appearance: none;
-        margin-top: -2px;
-        float: right;
-        font-size: 21px;
-        font-weight: 700;
-        line-height: 1;
-        color: #000;
-        text-shadow: 0 1px 0 #fff;
-        opacity: .2;
-        filter: alpha(opacity=20);
-    }
 
-    .close:hover {
-        color: #000;
-        text-decoration: none;
-        cursor: pointer;
-        opacity: .5;
-        filter: alpha(opacity=50);
-    }
-
-    #myModal .uk-modal-dialog {
-        width: 950px;
-        padding: 0;
-        border-radius: 0;
-    }
-
-    .modal-content-image-wrap {
-        position: relative;
-        width: 100%;
-        height: 550px;
-        overflow-x: hidden;
-        overflow-y: scroll;
-    }
-
-    .modal-content-image {
-        background-size: contain;
-        background-position-x: center;
-        background-repeat: no-repeat;
-    }
-
-    .display-background-img {
-        position: absolute;
-        background-size: cover;
-        top: 0px;
-        left: 0px;
-        height: 573px;
-        width: 768px;
-    }
-
-    .conversion-image_1 {
-        background-image: url(/img/landing/koala.jpg);
-    }
-
-    .conversion-image_2 {
-        background-image: url(/img/landing/pen.jpg);
-        left: 93px;
-    }
-
-    .landing-section_7-table-left-row-active {
-        background: #072154;
-    }
-
-    .landing-section_7-table-left-row-active a{
-        color: #fff;
-    }
-
-    .landing-section_1-form .form-submit {
-        clear: both;
-    }
 </style>
 
 
@@ -1062,19 +1004,19 @@
         var mobile = (/iphone|ipad|ipod|android|blackberry|mini|windows\sce|palm/i.test(navigator.userAgent.toLowerCase()));
         if (!mobile) {
             var cssId = 'uikitCss';
-            var head  = document.getElementsByTagName('head')[0];
-            var link  = document.createElement('link');
-            link.id   = cssId;
-            link.rel  = 'stylesheet';
+            var head = document.getElementsByTagName('head')[0];
+            var link = document.createElement('link');
+            link.id = cssId;
+            link.rel = 'stylesheet';
             link.type = 'text/css';
             link.href = '/css/uikit.docs.min.css';
             link.media = 'all';
             head.insertBefore(link, document.getElementsByTagName('link')[0]);
         }
-        
+
         $('body').css('height', 'auto');
-            
-        jQuery(window).load(function() {
+
+        jQuery(window).load(function () {
             jQuery("#status").fadeOut();
             jQuery("#preloader").delay(1000).fadeOut("slow");
         });
@@ -1101,7 +1043,7 @@
                 });
             }, 50);
         });
-        
+
 
         var delay = (function () {
             var timer = 0;
@@ -1177,7 +1119,7 @@
             });
             $('.landing-section_7-table-left-row-active').index();
         });
-        
+
         $('.landing-section_2-table').on('uk.scrollspy.inview', function () {
             var wrap = $('.landing-section_2-table-cell-icon');
             var angle = 0;
